--- a/www/templates/searcherPopup.html
+++ b/www/templates/searcherPopup.html
@@ -43,10 +43,9 @@
                 {{ r.Name}}
                 <i class="icon ion-checkmark" ng-show="r.Selected"></i>
             </div>
-            <div class="spacer"></div>
-            <a class="button button-assertive button-full" ng-show="searcher.showAddButton" href="#/new-customer/{{ searcher.search }}">
+            <button class="button button-assertive button-full" ng-show="searcher.showAddButton" ng-click="searcher.select(searcher.search)">
                 ¡Sin resultados! ¿Desea usar este dato?
-            </a>
+            </button>
         </div>
     </ion-content>
 </ion-modal-view>
