--- a/www/templates/notesPopup.html
+++ b/www/templates/notesPopup.html
@@ -9,7 +9,7 @@
         <form>
             <div class="list">
                 <label class="item item-input">
-                    <textarea rows="10" ng-readonly="notes.readOnly" ng-model="notes.value" ng-model-options="{debounce: 250}" ng-change="notes.onChange(notes.value)"></textarea>
+                    <textarea rows="10" ng-readonly="notes.readOnly" ng-model="notes.value" ng-model-options="{debounce: 250}" ng-change="notes.onChange(notes.value)" maxlength="5000"></textarea>
                 </label>
             </div>
         </form>
