--- a/www/templates/searcherPopup.html
+++ b/www/templates/searcherPopup.html
@@ -10,7 +10,7 @@
             <div class="list">
                 <label class="item item-input">
                     <i class="icon ion-search placeholder-icon"></i>
-                    <input type="text" ng-model="searcher.search" ng-model-options="{debounce: 250}" ng-change="searcher.filter()">
+                    <input type="text" ng-model="searcher.search" ng-model-options="{debounce: 250}" ng-change="searcher.filter()" maxlength="50">
                 </label>
             </div>
         </form>
