Mejoras en la validación de formularios

--- a/www/templates/records.html
+++ b/www/templates/records.html
@@ -19,7 +19,7 @@
                 <div class="col">
                     <label class="item item-input">
                         <span class="input-label">Modelo</span>
-                        <input type="text" class="selector-dialog" required readonly ng-model="filters.objectTypeModelName" ng-focus="searchObjectTypeModel()">
+                        <input type="text" class="selector-dialog" readonly ng-model="filters.objectTypeModelName" ng-focus="searchObjectTypeModel()">
                     </label>
                 </div>
                 <div class="col">
