--- a/www/templates/maintenance.html
+++ b/www/templates/maintenance.html
@@ -263,7 +263,7 @@
                             <div class="row">
                                 <div class="col">
                                     <label class="item item-input">
-                                        <input type="text" placeholder="Artículo" ng-class="{'selector-dialog': !readOnlyMode}" readonly ng-model="ao.articleName" ng-model-options="{updateOn: 'blur'}" ng-focus="searchArticle(ao)">
+                                        <input type="text" placeholder="Artículo" ng-class="{'selector-dialog': !readOnlyMode}" ng-required="($first)" readonly ng-model="ao.articleName" ng-model-options="{updateOn: 'blur'}" ng-focus="searchArticle(ao)">
                                     </label>
                                 </div>
                                 <div class="col col-25">
