--- a/www/templates/assembly.html
+++ b/www/templates/assembly.html
@@ -163,7 +163,7 @@
                                 </div>
                                 <div class="col col-25">
                                     <label class="item item-input">
-                                        <input type="number" placeholder="Cant." min="0.0" max="9999.99" ng-model="ao.quantity" ng-model-options="{updateOn: 'blur'}" ng-required="ao.articleId" ng-readonly="readOnlyMode">
+                                        <input type="number" placeholder="Cant." min="0.0" max="9999.99" ng-model="ao.quantity" ng-model-options="{updateOn: 'blur'}" ng-required="ao.articleId" ng-readonly="readOnlyMode" ng-change="addArticle()">
                                     </label>
                                 </div>
                             </div>
