--- a/www/templates/records.html
+++ b/www/templates/records.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="col">
                     <label class="item item-input">
-                        <span class="input-label">{{ filters.objectType }}</span>
+                        <span class="input-label">{{ objectTypeLabel }}</span>
                         <input type="text" class="selector-dialog" readonly ng-model="filters.objectTypeDescription" ng-focus="searchObjectType(recordsForm.$valid)">
                     </label>
                 </div>
